--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   bloc: ^8.1.4
   cached_network_image: ^3.3.1
+  firebase_core: ^3.4.0
 
 dev_dependencies:
   flutter_test:
