--- a/.github/workflows/android_firebase_distribution_workflow.yml
+++ b/.github/workflows/android_firebase_distribution_workflow.yml
@@ -29,13 +29,15 @@ jobs:
           bundler-cache: true
           working-directory: android
 
-      - name: Run Fastlane
-        uses: wzieba/Fastlane-Github-Action@v3
-        with:
-          lane: docdoc_distribution
-
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
           name: DocDoc App
           path: build/app/outputs/apk/release
+
+      - name: Run Fastlane
+        env:
+          FIREBASE_CLI_TOKEN: ${{ secrets.FIREBASE_CLI_TOKEN }}
+        run: bundle exec fastlane android docdoc_distribution
+        with:
+         working-directory: android
